[package]
name = "pact-csv-plugin"
version = "0.0.6"
edition = "2021"

[dependencies]
tonic = "0.10.2"
prost = "0.12.3"
prost-types = "0.12.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
futures = "0.3"
async-std = "1.12.0"
log = "0.4"
env_logger = "0.10.1"
maplit = "1.0.2"
pact_matching = "~1.1.9"
pact_models = "~1.1.17"
pact-plugin-driver = "~0.5.0"
csv = "1.3.0"
logos = "~0.12.1"
anyhow = "1.0.75"
bigdecimal = "0.4.2"
serde_json = "1.0.108"
bytes = { version = "1", features = ["serde"] }
either = "1.9.0"
itertools = "0.12.0"

[build-dependencies]
tonic-build = "0.10.2"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
codegen-units = 1
panic = "abort"
# lto = true
# https://github.com/johnthagen/min-sized-rust

## Original Sizes
#  24M    libpact_ffi.dylib
#  19M    pact_verifier_cli
#  18M    pact_mock_server_cli

# libpactffi.dylib size 24M -> 9.4M
# pact_verifier_cli size 19M -> 6.4M
# pact_mock_server_cli size 19M -> 5.6M