[package]
name = "pact-plugin-driver-ffi"
version = "0.0.0"
edition = "2018"

[dev-dependencies]
pact-plugin-driver = { version = "~0.5", path = "../driver" }
pact_ffi = "~0.4.14"
env_logger = "0.10.1"
expectest = "0.12.0"
serde_json = "1.0.108"
reqwest = { version = "0.11.23", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
csv = "1.3.0"
prost = "0.12.3"
prost-types = "0.12.3"
test-log = "0.2.14"
tokio = { version = "1.35.1", features = ["full"] }
tonic = "0.10.2"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
codegen-units = 1
panic = "abort"
# lto = true
# https://github.com/johnthagen/min-sized-rust

## Original Sizes
#  24M    libpact_ffi.dylib
#  19M    pact_verifier_cli
#  18M    pact_mock_server_cli

# libpactffi.dylib size 24M -> 9.4M
# pact_verifier_cli size 19M -> 6.4M
# pact_mock_server_cli size 19M -> 5.6M